--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
     "react-google-maps": "9.4.5",
+    "react-phone-input-2": "^2.15.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
