--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "file-viewer": "^1.0.0",
     "local-cors-proxy": "^1.1.0",
     "moment": "2.24.0",
-    "node-sass": "4.14.1",
+    "node-sass": "^4.14.1",
     "nouislider": "14.1.1",
     "react": "16.12.0",
     "react-chartjs-2": "2.9.0",
