--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@fortawesome/fontawesome-free": "5.12.1",
 		"@material-ui/core": "^4.12.4",
 		"@material-ui/data-grid": "^4.0.0-alpha.37",
+		"@material-ui/lab": "^4.0.0-alpha.61",
 		"@reduxjs/toolkit": "^1.8.1",
 		"@stripe/react-stripe-js": "^1.7.1",
 		"@stripe/stripe-js": "^1.27.0",
